# Jni

./: .gitignore  CMakeLists.txt  Jni.cpp  LICENSE  README.md
Tests/: AndroidManifest.xml  CMakeLists.txt  build.gradle  settings.gradle
Tests/cpp/: ClassNames.hpp  InstanceTest.cpp  InstanceTest.hpp  NativeClassMock.hpp  NativeClassTest.cpp  NativeClassTest.hpp  ObjectClassMock.hpp  ObjectTest.cpp  PrivateTest.cpp  StaticTest.cpp  StaticTest.hpp  Utilities.hpp  main.cpp
Tests/gradle/wrapper/: gradle-wrapper.properties
Tests/java/lv/gusc/jni/tests/: InstanceClass.java  InstanceTest.java  Main.java  MainActivity.java  NativeClass.java  NativeClassTest.java  ObjectClass.java  StaticClass.java  StaticTest.java  Test.java  TestClass.java
Tests/res/values/: themes.xml
Tests/res/values-night/: themes.xml
include/: JArray.hpp  JClass.hpp  JEnv.hpp  JObject.hpp  JString.hpp  JVM.hpp
include/Jni/: JArray.hpp  JClass.hpp  JEnv.hpp  JGlobalRef.hpp  JObject.hpp  JString.hpp  JVM.hpp  Jni.hpp  Object.hpp
include/Jni/private/: cast.hpp  forward.hpp  signature.hpp  strutils.hpp
include/private/: concat.hpp  signature.hpp
